# mini-oauth2

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1229c0434b88_roles.py  15659924b381_first.py  7c178754748d_first_migration.py  b64bff4c45de_oauth2.py  b6ce5789f55e_key_len_2k.py  d0ed9b295b4d_first_migration.py
app/: __init__.py  config.py  main.py
app/drivers/: cache.py  db.py  emails.py  init_db.py
app/models/: base.py  models.py
app/routers/: auth.py  clients.py  dependencies.py  forms.py  jwts.py  oauth.py  passwords.py  public.py  signup.py  social_login.py  social_user.py  user_info.py  users.py
app/services/: client_users.py  clients.py  oauth_client.py  providers.py  users.py
app/utils/: apple_utils.py  crypts.py  jwts.py  rands.py  signs.py  urls.py
tests/services/: client_users_test.py
views/: signin.html  signup.html
